deploy/k8s/traefik/ingress-and-middleware-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: remnanode-reality-tcp
  namespace: remnanode
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`*`)
      middlewares:
        - name: reality-whitelist
      services:
        - name: remnanode-active-service
          port: 443
          proxyProtocol:
            version: 2
